Adding layouts for timeline, updated look of timeline controls. (#356)
* Added stacked century layout.

* Added functions for retrieving date from timeline controls

* added set date function

--- a/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Timeline.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Timeline.storyboard
@@ -26,7 +26,7 @@
                                                 <collectionView id="hh4-uZ-Why" customClass="FlippedCollectionView" customModule="MapExplorer_macOS" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="664" height="198"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                                    <collectionViewLayout key="collectionViewLayout" id="bJW-po-dwy" customClass="TimelineLayout" customModule="MapExplorer_macOS" customModuleProvider="target"/>
+                                                    <collectionViewLayout key="collectionViewLayout" id="bJW-po-dwy" customClass="TimelineCenturyStackedLayout" customModule="MapExplorer_macOS" customModuleProvider="target"/>
                                                     <color key="primaryBackgroundColor" red="0.44063859179674914" green="0.44326171874999998" blue="0.42965281942173822" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </collectionView>
                                             </subviews>
@@ -41,16 +41,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="TFZ-Kd-Lat">
-                                        <rect key="frame" x="0.0" y="13" width="664" height="7"/>
+                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="TFZ-Kd-Lat">
+                                        <rect key="frame" x="87" y="13" width="490" height="7"/>
                                         <clipView key="contentView" drawsBackground="NO" id="DqZ-7r-uLk">
-                                            <rect key="frame" x="0.0" y="0.0" width="664" height="7"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="490" height="7"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <collectionView id="27P-tH-KFI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="664" height="158"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" scrollDirection="horizontal" id="Wjn-VO-suE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="490" height="7"/>
+                                                    <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" id="Wjn-VO-suE">
                                                         <size key="itemSize" width="50" height="50"/>
                                                     </collectionViewFlowLayout>
                                                     <color key="primaryBackgroundColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
@@ -62,8 +62,11 @@
                                             </subviews>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="490" id="gFT-5N-dWD"/>
+                                        </constraints>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="RaJ-g5-nYs">
-                                            <rect key="frame" x="-100" y="-100" width="414" height="16"/>
+                                            <rect key="frame" x="0.0" y="-10" width="490" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="qTl-2e-gOa">
@@ -71,16 +74,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="NUl-Dg-WwY">
-                                        <rect key="frame" x="0.0" y="6" width="664" height="7"/>
+                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="NUl-Dg-WwY">
+                                        <rect key="frame" x="87" y="6" width="490" height="7"/>
                                         <clipView key="contentView" drawsBackground="NO" id="Vpd-yq-eWk">
-                                            <rect key="frame" x="0.0" y="0.0" width="664" height="7"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="490" height="7"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <collectionView id="uKJ-ub-LXA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="664" height="158"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" scrollDirection="horizontal" id="Xty-b9-P8e">
+                                                    <rect key="frame" x="0.0" y="0.0" width="490" height="7"/>
+                                                    <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" id="Xty-b9-P8e">
                                                         <size key="itemSize" width="50" height="50"/>
                                                     </collectionViewFlowLayout>
                                                     <color key="primaryBackgroundColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
@@ -92,8 +95,11 @@
                                             </subviews>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="490" id="eBE-id-P2X"/>
+                                        </constraints>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="ExT-mm-A18">
-                                            <rect key="frame" x="-100" y="-100" width="414" height="16"/>
+                                            <rect key="frame" x="0.0" y="-10" width="490" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="xaR-am-hJg">
@@ -101,16 +107,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="KrB-Xy-tIn">
-                                        <rect key="frame" x="0.0" y="0.0" width="664" height="6"/>
+                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="KrB-Xy-tIn">
+                                        <rect key="frame" x="87" y="0.0" width="490" height="6"/>
                                         <clipView key="contentView" drawsBackground="NO" id="wSJ-l6-SxW">
-                                            <rect key="frame" x="0.0" y="0.0" width="664" height="6"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="490" height="6"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <collectionView id="7yP-gS-dIq">
-                                                    <rect key="frame" x="0.0" y="0.0" width="831" height="152"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="490" height="6"/>
                                                     <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" scrollDirection="horizontal" id="UVs-cE-qzY">
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" id="UVs-cE-qzY">
                                                         <size key="itemSize" width="50" height="50"/>
                                                     </collectionViewFlowLayout>
                                                     <color key="primaryBackgroundColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
@@ -122,8 +128,11 @@
                                             </subviews>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="490" id="qPf-4F-Dia"/>
+                                        </constraints>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="Kzq-zF-KHc">
-                                            <rect key="frame" x="-100" y="-100" width="414" height="16"/>
+                                            <rect key="frame" x="0.0" y="-10" width="490" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="si7-Qh-eMq">
@@ -134,20 +143,17 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="FoW-Io-IhM" firstAttribute="leading" secondItem="yPT-yt-MBL" secondAttribute="leading" id="4Qe-YX-ym7"/>
-                                    <constraint firstItem="KrB-Xy-tIn" firstAttribute="leading" secondItem="yPT-yt-MBL" secondAttribute="leading" id="7Cb-jJ-jWl"/>
-                                    <constraint firstAttribute="trailing" secondItem="TFZ-Kd-Lat" secondAttribute="trailing" id="Cpf-7T-8Zr"/>
                                     <constraint firstItem="FoW-Io-IhM" firstAttribute="top" secondItem="yPT-yt-MBL" secondAttribute="top" id="EQv-vO-tvf"/>
-                                    <constraint firstItem="NUl-Dg-WwY" firstAttribute="leading" secondItem="yPT-yt-MBL" secondAttribute="leading" id="F8T-ZM-cBS"/>
                                     <constraint firstAttribute="bottom" secondItem="KrB-Xy-tIn" secondAttribute="bottom" id="NRl-Ko-fZH"/>
-                                    <constraint firstAttribute="trailing" secondItem="KrB-Xy-tIn" secondAttribute="trailing" id="Ovv-dl-098"/>
-                                    <constraint firstAttribute="trailing" secondItem="NUl-Dg-WwY" secondAttribute="trailing" id="Rq0-t0-9dr"/>
+                                    <constraint firstItem="KrB-Xy-tIn" firstAttribute="centerX" secondItem="yPT-yt-MBL" secondAttribute="centerX" id="O8n-HQ-rPn"/>
                                     <constraint firstItem="TFZ-Kd-Lat" firstAttribute="top" secondItem="hh4-uZ-Why" secondAttribute="bottom" constant="20" id="Ulx-1e-H3c"/>
-                                    <constraint firstItem="TFZ-Kd-Lat" firstAttribute="leading" secondItem="yPT-yt-MBL" secondAttribute="leading" id="X1X-HD-MKi"/>
                                     <constraint firstItem="NUl-Dg-WwY" firstAttribute="top" secondItem="TFZ-Kd-Lat" secondAttribute="bottom" id="Zu3-AW-8W1"/>
                                     <constraint firstItem="KrB-Xy-tIn" firstAttribute="height" secondItem="NUl-Dg-WwY" secondAttribute="height" id="dHU-8k-gmk"/>
                                     <constraint firstItem="NUl-Dg-WwY" firstAttribute="height" secondItem="TFZ-Kd-Lat" secondAttribute="height" id="iId-wK-USU"/>
+                                    <constraint firstItem="TFZ-Kd-Lat" firstAttribute="centerX" secondItem="yPT-yt-MBL" secondAttribute="centerX" id="lW2-vI-KFs"/>
                                     <constraint firstItem="FoW-Io-IhM" firstAttribute="height" secondItem="yPT-yt-MBL" secondAttribute="height" multiplier="5:6" id="nnt-W4-iab"/>
                                     <constraint firstItem="KrB-Xy-tIn" firstAttribute="top" secondItem="NUl-Dg-WwY" secondAttribute="bottom" id="oiF-hM-buu"/>
+                                    <constraint firstItem="NUl-Dg-WwY" firstAttribute="centerX" secondItem="yPT-yt-MBL" secondAttribute="centerX" id="phD-nu-tbo"/>
                                     <constraint firstAttribute="trailing" secondItem="FoW-Io-IhM" secondAttribute="trailing" id="vM7-22-8ry"/>
                                 </constraints>
                             </customView>
