--- a/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Views/TimelineItemView.xib
+++ b/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Views/TimelineItemView.xib
@@ -7,64 +7,56 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TimelineItemView" customModule="MapExplorer_macOS" customModuleProvider="target">
             <connections>
-                <outlet property="animatedHighlightView" destination="jB7-yT-mYA" id="Lhp-Qx-6YL"/>
-                <outlet property="animatedWidthConstraint" destination="PgG-4Z-Zl9" id="3ZO-QY-DFg"/>
                 <outlet property="backgroundView" destination="QrL-NI-D0P" id="UEo-2X-FUD"/>
                 <outlet property="contentView" destination="C4u-6g-tKh" id="cXA-Ye-Bzz"/>
+                <outlet property="contentViewWidthConstraint" destination="9cD-NI-NZR" id="CS7-Mz-jGj"/>
                 <outlet property="highlightView" destination="xmo-R1-THM" id="o9M-FK-vdj"/>
+                <outlet property="highlightViewWidthConstraint" destination="HxO-1w-ihB" id="0k0-Mk-Sad"/>
                 <outlet property="titleTextField" destination="RX4-ER-hWk" id="Xgk-rH-UQF"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="60"/>
+        <customView misplaced="YES" id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="238" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="C4u-6g-tKh">
-                    <rect key="frame" x="4" y="2" width="192" height="56"/>
+                    <rect key="frame" x="4" y="2" width="230" height="56"/>
                     <subviews>
                         <customView translatesAutoresizingMaskIntoConstraints="NO" id="QrL-NI-D0P">
-                            <rect key="frame" x="0.0" y="0.0" width="192" height="56"/>
+                            <rect key="frame" x="0.0" y="0.0" width="230" height="56"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="192" id="K19-Tr-jVf"/>
+                                <constraint firstAttribute="width" constant="230" id="K19-Tr-jVf"/>
                             </constraints>
                         </customView>
-                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="jB7-yT-mYA">
-                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="56"/>
-                            <constraints>
-                                <constraint firstAttribute="width" id="PgG-4Z-Zl9"/>
-                            </constraints>
-                        </customView>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RX4-ER-hWk">
-                            <rect key="frame" x="11" y="20" width="175" height="17"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="L5U-Qk-t9m">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
                         <customView translatesAutoresizingMaskIntoConstraints="NO" id="xmo-R1-THM">
                             <rect key="frame" x="0.0" y="0.0" width="5" height="56"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="5" id="HxO-1w-ihB"/>
                             </constraints>
                         </customView>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RX4-ER-hWk">
+                            <rect key="frame" x="11" y="20" width="213" height="17"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="L5U-Qk-t9m">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
                     </subviews>
                     <constraints>
+                        <constraint firstAttribute="width" constant="230" id="9cD-NI-NZR"/>
+                        <constraint firstItem="RX4-ER-hWk" firstAttribute="leading" secondItem="C4u-6g-tKh" secondAttribute="leading" constant="13" id="Af5-f1-VNZ"/>
                         <constraint firstAttribute="bottom" secondItem="QrL-NI-D0P" secondAttribute="bottom" id="BNA-ln-gvn"/>
-                        <constraint firstItem="jB7-yT-mYA" firstAttribute="top" secondItem="C4u-6g-tKh" secondAttribute="top" id="CQE-il-DYn"/>
                         <constraint firstAttribute="trailing" secondItem="RX4-ER-hWk" secondAttribute="trailing" constant="8" id="DbZ-G0-QQ5"/>
                         <constraint firstAttribute="bottom" secondItem="xmo-R1-THM" secondAttribute="bottom" id="K2j-tc-BQx"/>
                         <constraint firstItem="RX4-ER-hWk" firstAttribute="centerY" secondItem="C4u-6g-tKh" secondAttribute="centerY" id="Uhq-Sw-jBv"/>
+                        <constraint firstItem="QrL-NI-D0P" firstAttribute="leading" secondItem="C4u-6g-tKh" secondAttribute="leading" id="a4K-Hq-T3x"/>
                         <constraint firstItem="xmo-R1-THM" firstAttribute="top" secondItem="C4u-6g-tKh" secondAttribute="top" id="b6a-tf-Kvh"/>
                         <constraint firstItem="QrL-NI-D0P" firstAttribute="top" secondItem="C4u-6g-tKh" secondAttribute="top" id="deR-EF-S1g"/>
-                        <constraint firstItem="RX4-ER-hWk" firstAttribute="leading" secondItem="xmo-R1-THM" secondAttribute="trailing" constant="8" id="jy9-Gl-iBm"/>
-                        <constraint firstItem="QrL-NI-D0P" firstAttribute="leading" secondItem="jB7-yT-mYA" secondAttribute="trailing" id="mAK-YJ-xEv"/>
-                        <constraint firstItem="jB7-yT-mYA" firstAttribute="leading" secondItem="C4u-6g-tKh" secondAttribute="leading" id="nXH-Ie-mOm"/>
                         <constraint firstItem="xmo-R1-THM" firstAttribute="leading" secondItem="C4u-6g-tKh" secondAttribute="leading" id="oRy-Re-nTy"/>
-                        <constraint firstAttribute="bottom" secondItem="jB7-yT-mYA" secondAttribute="bottom" id="p0Z-qg-sLB"/>
                     </constraints>
                 </customView>
             </subviews>
