--- a/WindowExplorer/Sources/Controllers/SearchViewController/Search.storyboard
+++ b/WindowExplorer/Sources/Controllers/SearchViewController/Search.storyboard
@@ -147,11 +147,11 @@
                                         </constraints>
                                     </customView>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sB-bV-Fph">
-                                        <rect key="frame" x="148" y="0.0" width="55" height="29"/>
+                                        <rect key="frame" x="147" y="0.0" width="57" height="29"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="3NA-oG-NTh"/>
                                         </constraints>
-                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Search" usesSingleLineMode="YES" id="4y5-u6-SCI">
+                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Browse" usesSingleLineMode="YES" id="4y5-u6-SCI">
                                             <font key="font" size="16" name="Soleil"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
