Magnification button functionality added

--- a/WindowExplorer/Sources/Views/ZoomControl/ZoomControl.xib
+++ b/WindowExplorer/Sources/Views/ZoomControl/ZoomControl.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,6 +10,8 @@
             <connections>
                 <outlet property="contentView" destination="c22-O7-iKe" id="e1y-ce-MlR"/>
                 <outlet property="seekBar" destination="igJ-uQ-VVI" id="UhG-J8-S9y"/>
+                <outlet property="zoomInButton" destination="F4k-eL-tzC" id="PVN-Qe-FQc"/>
+                <outlet property="zoomOutButton" destination="rAl-eH-1Cr" id="0DI-Cy-1Xm"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
